--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,33 +1,39 @@
-# prod
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Testing
+coverage/
+
+# Production
+build/
 dist/
 
-# dev
-.yarn/
-!.yarn/releases
-.vscode/*
-!.vscode/launch.json
-!.vscode/*.code-snippets
-.idea/workspace.xml
-.idea/usage.statistics.xml
-.idea/shelf
-
-# deps
-node_modules/
-.wrangler
-
-# env
+# Misc
+.DS_Store
 .env
-.env.production
-.dev.vars
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# logs
-logs/
-*.log
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-# misc
-.DS_Store
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Cloudflare Workers
+wrangler.toml
+
+# Bun
+bun.lockb
